# Anomaly-Detection-DER-Systems

./: .dockerignore  .gitignore  Dockerfile  KAGGLE_ENVIRONMENT.md  README.md  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  fdb.md  generate_notebook.py  main.py  pyproject.toml  run_docker.sh  run_pipeline.sh  writeup.md
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
docs/: description.md  writeup.md
src/: __init__.py  constants.py  contracts.py  feature_engineering.py  features.py  main.py  modeling.py  pipeline.py  rules.py  schema.py
