[project]
name = "der-anomaly-xgb-baseline"
version = "0.1.0"
description = "Research-guided XGBoost baseline for DER anomaly detection"
readme = "description.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "scikit-learn>=1.5,<2",
    "xgboost>=2.1,<4",
]

[tool.uv]
package = false
